[project]
name = "miia-test-utils"
version = "0.1.0"
description = "Test utilities for MIIA back-end automated tests"
authors = [
    {name = "MIIA Tecnologia Educacional Ltda.", email = "contato@miia.tech"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest (>=8.3.5,<9.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]

[tool.poetry]
packages = [{include = "miia_test_utils", from = "src"}]


[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
fastapi = "^0.115.12"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
